--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
     <div class="modal-container theme">
       <div class="chart__header theme">
-        <div class="chart__header-account-details theme">
+        <div class="chart__header-account-details">
           <div class="close-button">
             <button class="close-cart-button theme">X</button>
           </div>
-          <div class="titles theme">
+          <div class="titles">
             <h4 class="theme">Facebook followers</h4>
             <div>
               <img src="./src/assets/icon-facebook.svg" alt="icon-${item.id}">
@@ -71,6 +71,7 @@
         </div>
       </div>
       <div class="chart-container theme">
+        <span>May 4 - May 13</span>
         <canvas id="chart"></canvas>
       </div>
     </div>
